<resources>
    <string name="app_name">Beacon Finder</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="test_saving_a_file">Test Saving a file</string>
    <string name="looking_for_beacons">Looking for beacons …</string>

    <string name="beacon_custom_notification_title_template">Beacon custom: %1$s</string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="start_scan">Start Scan</string>
    <string name="stop_scan">Stop Scan</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="play_sound">Play Sound</string>
    <string name="stop_sound">Stop Sound</string>
    <string name="play_branco">Play Branco</string>
    <string name="play_verde">Play Verde</string>
</resources>
