<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/btnStartId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="32dp"
        android:text="@string/start_scan"
        app:layout_constraintEnd_toStartOf="@+id/btnStopId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnStopId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="1dp"
        android:text="@string/stop_scan"
        app:layout_constraintBottom_toTopOf="@+id/btnStopService"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnStartId"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/buttonSaveId"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/test_saving_a_file"
        app:layout_constraintBottom_toTopOf="@+id/btn_playVerdeId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStopService" />

    <Button
        android:id="@+id/btnStartServiceId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:drawableStart="@drawable/ic_play_arrow_black_24dp"
        android:onClick="startService"
        android:text="@string/start_service"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnStopService"
        app:layout_constraintEnd_toStartOf="@+id/btnStopService"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnStopService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:drawableStart="@drawable/ic_stop_black_24dp"
        android:onClick="stopService"
        android:text="@string/stop_service"
        app:layout_constraintBottom_toTopOf="@+id/buttonSaveId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnStartServiceId"
        app:layout_constraintTop_toBottomOf="@+id/btnStopId" />

    <Button
        android:id="@+id/btn_playBrancoId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:text="@string/play_branco"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_playVerdeId"
        app:layout_constraintEnd_toStartOf="@+id/btn_playVerdeId"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_playVerdeId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_verde"
        app:layout_constraintBottom_toTopOf="@+id/btn_stopAudioId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_playBrancoId"
        app:layout_constraintTop_toBottomOf="@+id/buttonSaveId" />

    <Button
        android:id="@+id/btn_stopAudioId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/stop_sound"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_playVerdeId" />

</android.support.constraint.ConstraintLayout>
